# osmium

./: Cargo.toml  README
.cargo/: config  config.toml
foundry/: Cargo.toml
foundry/src/: main.rs
src/: main.rs
