[workspace]
resolver = "2"
members = [ "foundry" ]

[package]
name = "osmium"
version = "0.0.1"
authors = [ "Aaron Geiger <aaron@geigr.dev>" ]
edition = "2021"

[build]
build-stage = 1
target = ["x86_64-unknown-uefi"]

[profile.dev]
opt-level = 3

[dependencies]
log = "0.4.20"
uefi = "0.26.0"
uefi-services = "0.23.0"
